# Filters-in-OpenCV

Filters-gauss,box,bilateral,median/: bilateral.cpp  filters.cpp  gaussian.cpp  median.cpp
MorphologicalFilters/: CMakeLists.txt  filters.cpp
filter2D/: CMakeLists.txt  filters.cpp
